# composed-linear-classifiers

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-minimal.txt  requirements.txt
artifacts/original/: VKR_Babak_PM22-6.docx  Презентация_предзащита.pptx
data/: README.md
docs/: COMMISSION_NOTE.md  EXPORT_MANIFEST.md  METHODOLOGY.md  thesis_text_export.md  thesis_text_export.txt
exports/code/: main_export.py
notebooks/: main.ipynb
results/: README.md  metrics_default_failures_from_notebook.csv  metrics_default_stream_from_notebook.csv  metrics_default_table_preview_from_notebook.csv  metrics_tuned_partial_from_notebook.csv
results/summary_tables/: mean_metrics_by_model_family.csv  top_models_by_dataset.csv
scripts/: make_summary_tables.py  run_default_cv.py  run_optuna_cv.py  smoke_test.py
src/composed_linear_classifiers/: __init__.py  core.py
tests/: test_smoke.py
